feat(url): criado endpoint para retornar total de cliques e maior quantidade de cliques de uma url